Apps_deployment/Image-Group/image-service.yml
apiVersion: v1
kind: Service
metadata:
  name: image-service
  namespace: app-services
  labels:
    app: image-service
spec:
  type: ClusterIP
  selector:
    app: image-service
  ports:
  - protocol: TCP
    port: 8082
    targetPort: 8082
    name: http
